--- a/css/styles.css
+++ b/css/styles.css
@@ -118,10 +118,12 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+	align-items: center;
+	background-color: #3397DB;
+	border-top: solid #252831;
+	height: 85px;
+	padding-top: 10px;
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
 }
 
 .filter-options h2 {
