--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,8 @@ nav h1 a {
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
+	display: flex;
+	flex-wrap: wrap;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
