Jutified content in restaurant list as space around

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ nav h1 a {
   background-color: #f3f3f3;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-around;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
