--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 #maincontent {
   background-color: #f3f3f3;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
   min-height: 100%;
 }
 
@@ -295,7 +298,7 @@ nav h1 a {
 
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
