On mobile, map is full-width and 400px high

--- a/css/styles.css
+++ b/css/styles.css
@@ -338,6 +338,12 @@ nav h1 a {
 	#restaurants-list li {
 		width: calc(100% - 30px)
 	}
+
+	/* ====================== Restaurant Details ====================== */
+	.inside #map-container {
+		height: 400px;
+		width: 100%;
+	}
 }
 
 /* ====================== Tablet ====================== */
