--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,7 @@ nav h1 a {
 	/* ====================== Restaurant Details ====================== */
 	.inside #map-container {
 		height: 400px;
+		position: relative;
 		width: 100%;
 	}
 }
