--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,19 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 	display: block;
 }
 
+.skip-link {
+	padding: 10px;
+	z-index: 100;
+
+	position: absolute;
+	top: -40px;
+	left: 0;
+}
+
+.skip-link:focus {
+	top: 0;
+}
+
 #maincontent {
   background-color: #f3f3f3;
 	display: flex;
