--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 .skip-link {
+	background-color: #252831;
+	color: white;
 	padding: 10px;
 	z-index: 100;
 
