--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	flex-wrap: wrap;
   min-height: 100%;
 	width: 100%;
@@ -240,13 +240,15 @@ nav h1 a {
   z-index: 1000;
 }
 
+.left-column, .right-column {
+	width: 50%;
+}
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  position: relative;
+  width: 100%;
 }
 
 .inside #map {
@@ -298,7 +300,6 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
 }
 
 #reviews-container {
@@ -367,15 +368,22 @@ nav h1 a {
 	}
 
 	/* ====================== Restaurant Details ====================== */
+	.left-column {
+		order: 1;
+		width: 100%;
+	}
+
+	.right-column {
+		order: 0;
+		width: 100%;
+	}
+
 	.inside #map-container {
 		height: 400px;
-		position: relative;
-		width: 100%;
 	}
 
 	#restaurant-container, #reviews-container {
 		padding: 10px;
-		width: 100%;
 	}
 }
 
